--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-graphql": "^0.12.0",
     "fs": "^0.0.1-security",
+    "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
     "uuid": "^10.0.0"
   }
